--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lifeomic/react-vis-network": "^1.1.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-graph-vis": "^1.0.2",
+    "react-orgchart": "^1.0.5",
     "react-scripts": "2.1.8"
   },
   "scripts": {
